--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+TC&display=swap");
 @import "tailwindcss";
 
 @theme {
   /* Font-Family */
   --font-mona_sans: "Mona Sans", sans-serif;
+  --font-WDXL: "WDXL Lubrifont TC", sans-serif;
 }
